course work django

--- a/templates/app_email/email_list.html
+++ b/templates/app_email/email_list.html
@@ -16,16 +16,17 @@
                     <div class="card {% cycle 'bg-danger' 'bg-secondary' as color %} text-white shadow">
                         <div class="card-header text-center"><h5>{{ mail.subject }}</h5></div>
                         <div class="card-body">
-                            <p>{{ mail.message|truncatechars:35 }}</p>
-                            <p class="card-text">Sent to:
-                                {% for client in mail.send_to_client.all|slice:":2" %}
-                                    {{ client.full_name}}{% if not forloop.last %}, {% endif %}{% if forloop.last %}..{% endif %}
+                            <p>Сообщение: {{ mail.message|truncatechars:35 }}</p>
+                            <p class="card-text">Получатель:
+                                {% for client in mail.send_to_client.all|slice:2 %}
+                                    {{ client.full_name}}{% if not forloop.last %}, {% endif %}{% if forloop.last %}{% endif %}
                                 {% endfor %}
                             </p>
-                            <p class="card-text">Send Time: {{ mail.send_time }}</p>
-                            <p class="card-text">Send Day: {{ mail.send_day }}</p>
+                            <p class="card-text">Дата: {{ mail.send_datetime }}</p>
+                            <p class="mb-0">Чистота: {{ mail.get_frequency_display }}</p>
+
                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                <p class="mb-0">Frequency: {{ mail.frequency }}</p>
+                                <p class="card-text">Статус: {{ mail.get_status_display }}</p>
                                 <div>
                                     <a href="{% url 'email:update' mail.id %}"
                                        class="btn btn-sm {% if color == 'bg-danger' %}btn-secondary{% else %}btn-danger{% endif %} text-white">Edit</a>
