--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -22,8 +22,8 @@
                 </div>
                 <div class="btn-group-sm ml-auto">
                     {% if user.is_authenticated %}
-                        <a href="#" class="btn btn-secondary">Admin</a>
-                        <a href="{% url 'user:profile' %}" class="btn btn-secondary">Profile</a>
+                        <a href="{% url 'admin:index' %}" class="btn btn-secondary">Admin</a>
+                        <a href="{% url 'user:profile' %}" class="btn btn-secondary">{{ user.email }}</a>
                         <a href="{% url 'user:logout' %}" class="btn btn-danger">Logout</a>
                     {% else %}
                         <a href="{% url 'admin:index' %}" class="btn btn-secondary">Admin</a>
@@ -37,17 +37,18 @@
 </header>
 
 
+
 <div class="container-fluid">
 <section class="vh-100 pt-5 position-relative">
     <div class="d-flex justify-content-center align-items-center pt-5">
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8 col-sm-10">
-                    <h4 class="text-center mb-4">
+                    <h2 class="text-center mb-4">
                         {% block title %}
                             Precision Email Marketing for Businesses
                         {% endblock title %}
-                    </h4>
+                    </h2>
                 </div>
             </div>
         </div>
